updated and added

--- a/views/filter/edit.pug
+++ b/views/filter/edit.pug
@@ -1,104 +1,78 @@
 extends ../layout
-block css
-    style.
-        fieldset 
-        {
-            border: 1px solid #ddd !important;
-            margin: 0;
-            xmin-width: 0;
-            padding: 10px;       
-            position: relative;
-            border-radius:4px;
-            background-color:#f5f5f5;
-            padding-left:10px!important;
-        }
-        legend
-        {
-            font-size:14px;
-            font-weight:bold;
-            margin-bottom: 0px; 
-            width: 35%; 
-            border: 1px solid #ddd;
-            border-radius: 4px; 
-            padding: 5px 5px 5px 10px; 
-            background-color: #ffffff;
-        }
-        textarea{
-            resize:none;
-        }
+
 block content
-  h1= title
+  h1 Editing Filter #{title}
   .row
     fieldset.form-group.col-md
         legend Filtering for Main Section
         .form-group
             label(for="skip_url_starts") Skip url Starts With
-            textarea#skip_url_starts.form-control(name="skip_url_starts", cols="30", rows="5")
+            textarea#skip_url_starts.form-control(name="skip_url_starts", cols="30", rows="5")=data.main_section_url_filter.skip_url_starts.join('\n')
         .form-group
             label(for="skip_url_ends") Skip url Ends With
-            textarea#skip_url_ends.form-control(name="skip_url_ends", cols="30", rows="5")
+            textarea#skip_url_ends.form-control(name="skip_url_ends", cols="30", rows="5")=data.main_section_url_filter.skip_url_ends.join('\n')
         .form-group
             label(for="skip_url_contains") Skip url Contains With
-            textarea#skip_url_contains.form-control(name="skip_url_contains", cols="30", rows="5")
+            textarea#skip_url_contains.form-control(name="skip_url_contains", cols="30", rows="5")=data.main_section_url_filter.skip_url_contains.join('\n')
         .form-group
             label(for="skip_exact_url") Exact
-            textarea#skip_exact_url.form-control(name="skip_exact_url", cols="30", rows="5")
+            textarea#skip_exact_url.form-control(name="skip_exact_url", cols="30", rows="5")=data.main_section_url_filter.skip_exact_url.join('\n')
         .form-group
             label(for="accept_only") Accept Only
-            textarea#accept_only.form-control(name="accept_only", cols="30", rows="5")
+            textarea#accept_only.form-control(name="accept_only", cols="30", rows="5")=data.main_section_url_filter.accept_only.join('\n')
         .form-group
             label(for="regex_include_only") Regex Include
-            textarea#regex_include_only.form-control(name="regex_include_only", cols="30", rows="5")
+            textarea#regex_include_only.form-control(name="regex_include_only", cols="30", rows="5")=data.main_section_url_filter.regex_include_only.join('\n')
         .form-group
             label(for="regex_exclude_only") Regex Exclude
-            textarea#regex_exclude_only.form-control(name="regex_exclude_only", cols="30", rows="5")
+            textarea#regex_exclude_only.form-control(name="regex_exclude_only", cols="30", rows="5")=data.main_section_url_filter.regex_exclude_only.join('\n')
     fieldset.form-group.col-md
         legend Filtering for Sub Section
         .form-group
             label(for="skip_url_starts") Skip url Starts With
-            textarea#skip_url_starts.form-control(name="skip_url_starts", cols="30", rows="5")
+            textarea#skip_url_starts.form-control(name="skip_url_starts", cols="30", rows="5")=data.sub_section_url_filter.skip_url_starts.join('\n')
         .form-group
             label(for="skip_url_ends") Skip url Ends With
-            textarea#skip_url_ends.form-control(name="skip_url_ends", cols="30", rows="5")
+            textarea#skip_url_ends.form-control(name="skip_url_ends", cols="30", rows="5")=data.sub_section_url_filter.skip_url_ends.join('\n')
         .form-group
             label(for="skip_url_contains") Skip url Contains With
-            textarea#skip_url_contains.form-control(name="skip_url_contains", cols="30", rows="5")
+            textarea#skip_url_contains.form-control(name="skip_url_contains", cols="30", rows="5")=data.sub_section_url_filter.skip_url_contains.join('\n')
         .form-group
             label(for="skip_exact_url") Exact
-            textarea#skip_exact_url.form-control(name="skip_exact_url", cols="30", rows="5")
+            textarea#skip_exact_url.form-control(name="skip_exact_url", cols="30", rows="5")=data.sub_section_url_filter.skip_exact_url.join('\n')
         .form-group
             label(for="accept_only") Accept Only
-            textarea#accept_only.form-control(name="accept_only", cols="30", rows="5")
+            textarea#accept_only.form-control(name="accept_only", cols="30", rows="5")=data.sub_section_url_filter.accept_only.join('\n')
         .form-group
             label(for="regex_include_only") Regex Include
-            textarea#regex_include_only.form-control(name="regex_include_only", cols="30", rows="5")
+            textarea#regex_include_only.form-control(name="regex_include_only", cols="30", rows="5")=data.sub_section_url_filter.regex_include_only.join('\n')
         .form-group
             label(for="regex_exclude_only") Regex Exclude
-            textarea#regex_exclude_only.form-control(name="regex_exclude_only", cols="30", rows="5")
+            textarea#regex_exclude_only.form-control(name="regex_exclude_only", cols="30", rows="5")=data.sub_section_url_filter.regex_exclude_only.join('\n')
     fieldset.form-group.col-md
         legend Filtering for Article Links
         .form-group
             label(for="skip_url_starts") Skip url Starts With
-            textarea#skip_url_starts.form-control(name="skip_url_starts", cols="30", rows="5")
+            textarea#skip_url_starts.form-control(name="skip_url_starts", cols="30", rows="5")=data.article_url_filter.skip_url_starts.join('\n')
         .form-group
             label(for="skip_url_ends") Skip url Ends With
-            textarea#skip_url_ends.form-control(name="skip_url_ends", cols="30", rows="5")
+            textarea#skip_url_ends.form-control(name="skip_url_ends", cols="30", rows="5")=data.article_url_filter.skip_url_ends.join('\n')
         .form-group
             label(for="skip_url_contains") Skip url Contains With
-            textarea#skip_url_contains.form-control(name="skip_url_contains", cols="30", rows="5")
+            textarea#skip_url_contains.form-control(name="skip_url_contains", cols="30", rows="5")=data.article_url_filter.skip_url_contains.join('\n')
         .form-group
             label(for="skip_exact_url") Exact
-            textarea#skip_exact_url.form-control(name="skip_exact_url", cols="30", rows="5")
+            textarea#skip_exact_url.form-control(name="skip_exact_url", cols="30", rows="5")=data.article_url_filter.skip_exact_url.join('\n')
         .form-group
             label(for="accept_only") Accept Only
-            textarea#accept_only.form-control(name="accept_only", cols="30", rows="5")
+            textarea#accept_only.form-control(name="accept_only", cols="30", rows="5")=data.article_url_filter.accept_only.join('\n')
         .form-group
             label(for="regex_include_only") Regex Include
-            textarea#regex_include_only.form-control(name="regex_include_only", cols="30", rows="5")
+            textarea#regex_include_only.form-control(name="regex_include_only", cols="30", rows="5")=data.article_url_filter.regex_include_only.join('\n')
         .form-group
             label(for="regex_exclude_only") Regex Exclude
-            textarea#regex_exclude_only.form-control(name="regex_exclude_only", cols="30", rows="5")
-    button#add(type="button" class="btn btn-outline-info btn-rounded waves-effect", style="position:fixed; bottom:10px; right:10px") Add
+            textarea#regex_exclude_only.form-control(name="regex_exclude_only", cols="30", rows="5")=data.article_url_filter.regex_exclude_only.join('\n')
+    button#add(type="button" class="btn btn-outline-primary btn-rounded waves-effect", style="position:fixed; bottom:10px; right:10px") Update
 block js
     script.
         function getValues(data){
@@ -162,14 +136,12 @@ block js
                 'dataType' : "json",
                 'contentType' : "application/json; charset=utf-8",
                 'method': 'POST',
-                'url': '/filters/store',
+                'url': '/filters/update/#{data._id}',
                 'data': JSON.stringify(dataJSON)
             }).done(function(response){
                 console.log(response)
+                location.reload()
             }).fail(function(error){
                 console.log(error)
             })
         })
-        
-        
-        
