--- a/views/website/add.pug
+++ b/views/website/add.pug
@@ -86,25 +86,25 @@ block content
                 label(for="section_config") Main Section Config
                 .form-group
                     label(for="section_config_starts") Skip url starts with
-                    textarea#section_config_starts.form-control(name="section_config_starts", cols="30", rows="5")
+                    textarea#section_config_starts.form-control(name="section_config_starts", cols="30", rows="5")=data.main_section_url_filter.skip_url_starts.join('\n')
                 .form-group
                     label(for="section_config_ends") Skip url ends with
-                    textarea#section_config_ends.form-control(name="section_config_ends", cols="30", rows="5")
+                    textarea#section_config_ends.form-control(name="section_config_ends", cols="30", rows="5")=data.main_section_url_filter.skip_url_ends.join('\n')
                 .form-group
                     label(for="section_config_contains") Skip url contains with
-                    textarea#section_config_contains.form-control(name="section_config_contains", cols="30", rows="5")
+                    textarea#section_config_contains.form-control(name="section_config_contains", cols="30", rows="5")=data.main_section_url_filter.skip_url_contains.join('\n')
                 .form-group
                     label(for="section_config_exact") Skip exact url
-                    textarea#section_config_exact.form-control(name="section_config_exact", cols="30", rows="5")
+                    textarea#section_config_exact.form-control(name="section_config_exact", cols="30", rows="5")=data.main_section_url_filter.skip_exact_url.join('\n')
                 .form-group
                     label(for="section_config_accept") Accept Only
-                    textarea#section_config_accept.form-control(name="section_config_accept", cols="30", rows="5")
+                    textarea#section_config_accept.form-control(name="section_config_accept", cols="30", rows="5")=data.main_section_url_filter.accept_only.join('\n')
                 .form-group
                     label(for="section_regex_include") Regex Include Only
-                    textarea#section_regex_include.form-control(name="section_regex_include", cols="30", rows="5")
+                    textarea#section_regex_include.form-control(name="section_regex_include", cols="30", rows="5")=data.main_section_url_filter.regex_include_only.join('\n')
                 .form-group
                     label(for="section_regex_exclude") Regex Exclude Only
-                    textarea#section_regex_exclude.form-control(name="section_regex_exclude", cols="30", rows="5")
+                    textarea#section_regex_exclude.form-control(name="section_regex_exclude", cols="30", rows="5")=data.main_section_url_filter.regex_exclude_only.join('\n')
             
         fieldset.form-group.col-md
             
@@ -114,25 +114,25 @@ block content
                 label(for="section_config") Sub Section Config
                 .form-group
                     label(for="section_config_starts2") Skip url starts with
-                    textarea#section_config_starts2.form-control(name="section_config_starts2", cols="30", rows="5")
+                    textarea#section_config_starts2.form-control(name="section_config_starts2", cols="30", rows="5")=data.sub_section_url_filter.skip_url_starts.join('\n')
                 .form-group
                     label(for="section_config_ends2") Skip url ends with
-                    textarea#section_config_ends2.form-control(name="section_config_ends2", cols="30", rows="5")
+                    textarea#section_config_ends2.form-control(name="section_config_ends2", cols="30", rows="5")=data.sub_section_url_filter.skip_url_ends.join('\n')
                 .form-group
                     label(for="section_config_contains2") Skip url contains with
-                    textarea#section_config_contains2.form-control(name="section_config_contains2", cols="30", rows="5")
+                    textarea#section_config_contains2.form-control(name="section_config_contains2", cols="30", rows="5")=data.sub_section_url_filter.skip_url_contains.join('\n')
                 .form-group
                     label(for="section_config_exact2") Skip exact url
-                    textarea#section_config_exact2.form-control(name="section_config_exact2", cols="30", rows="5")
+                    textarea#section_config_exact2.form-control(name="section_config_exact2", cols="30", rows="5")=data.sub_section_url_filter.skip_exact_url.join('\n')
                 .form-group
                     label(for="section_config_accept2") Accept Only
-                    textarea#section_config_accept2.form-control(name="section_config_accept2", cols="30", rows="5")
+                    textarea#section_config_accept2.form-control(name="section_config_accept2", cols="30", rows="5")=data.sub_section_url_filter.accept_only.join('\n')
                 .form-group
                     label(for="section_regex_include2") Regex Include Only
-                    textarea#section_regex_include2.form-control(name="section_regex_include2", cols="30", rows="5")
+                    textarea#section_regex_include2.form-control(name="section_regex_include2", cols="30", rows="5")=data.sub_section_url_filter.regex_include_only.join('\n')
                 .form-group
                     label(for="section_regex_exclude2") Regex Exclude Only
-                    textarea#section_regex_exclude2.form-control(name="section_regex_exclude2", cols="30", rows="5")
+                    textarea#section_regex_exclude2.form-control(name="section_regex_exclude2", cols="30", rows="5")=data.sub_section_url_filter.regex_exclude_only.join('\n')
 
     button#add(type="button" class="btn btn-outline-primary btn-rounded waves-effect", style="position:fixed; bottom:10px; right:10px") Add
     
