--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,6 +14,8 @@ html
         a(href="/article", class=(path=== '/article' ? 'nav-link active' : 'nav-link')) Articles
       li.nav-item
         a(href="/filter", class=(path=== '/filter' ? 'nav-link active' : 'nav-link')) Filter
+      li.nav-item
+        a(href="/admin/search_page", class=(path=== '/search_page' ? 'nav-link active' : 'nav-link')) Search
     
     .container
       block content
